# Jarvas-agent

./: .env.example  .gitignore  ANALISE_SINCRONIZACAO_v0.5.0.md  HEARTBEAT.md  LICENSE  MOLTBOOK_IMPLEMENTATION_GUIDE.md  PROXIMOS_PASSOS.md  README.md  Resumo_Jarvas.html  VALIDACAO_RESULTADO_20260417_124023.txt  VALIDACAO_RESULTADO_20260417_124057.txt  VALIDACAO_RESULTADO_20260417_124115.txt  VALIDACAO_RESULTADO_20260417_134305.txt  VALIDAR_SINCRONIZACAO.ps1  logica refatorada Jarvas.md  pyproject.toml
.pytest_tmp/: test_output_dir_excelcurrent  test_output_dir_imagescurrent  test_process_file_saves_to_supcurrent  test_process_file_txtcurrent
docs/: PLANO-MIGRACAO.md  PLANO-v0.5.0-MULTIAGENTE.md  em qual camada implementar.md  gerar_documentacao.py  jarvas-manual.html  plano-migracao.html
jarvas/: __main__.py  api.py  autoescola_data.py  cli.py  commands.py  context.py  debate.py  file_editor.py  file_processor.py  guard_deepseek.py  guard_gemini.py  guard_pipeline.py  hermes_client.py  intent_classifier.py  intent_parser.py  memory_writer.py  mempalace_client.py  model_registry.py  moltbook_scheduler.py  orchestrator.py  router.py  session.py  supabase_client.py
jarvas-vscode/: LICENSE  jarvas-chat-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
tests/: test_agent_adapters.py  test_agents_registry.py  test_cli.py  test_commands.py  test_context.py  test_debate.py  test_file_editor.py  test_file_processor.py  test_guard_deepseek.py  test_guard_gemini.py  test_guard_pipeline.py  test_hermes_client.py  test_intent_parser.py  test_managed_unification.py  (+12 more)
(+54 files in other folders)
