[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvas"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "google-generativeai>=0.8",
    "supabase>=2.0",
    "requests>=2.31",
]

[project.scripts]
jarvas = "jarvas.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jarvas*"]
